--- a/caykimnho_studio/caykimnho_studio.csproj
+++ b/caykimnho_studio/caykimnho_studio.csproj
@@ -262,6 +262,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Loading\loading.css" />
+    <Content Include="Content\Loading\loading.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
