Changes connect string database

--- a/caykimnho_studio/Web.config
+++ b/caykimnho_studio/Web.config
@@ -4,6 +4,7 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -57,7 +58,7 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="caykimnhoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TUAN;initial catalog=caykimnho;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="aendysho_caykimnhoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=125.212.224.205;initial catalog=aendysho_caykimnho;user id=aendysho_sa;password=Aendy3010dvt.2000;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -69,4 +70,7 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
+	<system.web>
+		<customErrors mode="Off" />
+	</system.web>
 </configuration>
