Update view layout

--- a/caykimnho_studio/Web.config
+++ b/caykimnho_studio/Web.config
@@ -58,7 +58,7 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="aendysho_caykimnhoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=125.212.224.205;initial catalog=aendysho_caykimnho;user id=aendysho_sa;password=Aendy3010dvt.2000;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="CayKimNhoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AENDY\DB;initial catalog=CayKimNho;persist security info=True;user id=admin;password=ckn;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
