--- a/caykimnho_studio/caykimnho_studio.csproj
+++ b/caykimnho_studio/caykimnho_studio.csproj
@@ -193,51 +193,13 @@
     <Content Include="Content\assets\img\bg\bg2.jpg" />
     <Content Include="Content\assets\img\bg\bg3.jpg" />
     <Content Include="Content\assets\img\bg\bg4.jpg" />
-    <Content Include="Content\assets\img\bg\shop_bg.jpg" />
-    <Content Include="Content\assets\img\blog\blog1.jpg" />
-    <Content Include="Content\assets\img\blog\blog2.jpg" />
-    <Content Include="Content\assets\img\blog\blog3.jpg" />
-    <Content Include="Content\assets\img\blog\blog4.jpg" />
-    <Content Include="Content\assets\img\blog\blog5.jpg" />
-    <Content Include="Content\assets\img\blog\blog6.jpg" />
-    <Content Include="Content\assets\img\blog\blog7.jpg" />
-    <Content Include="Content\assets\img\blog\blog8.jpg" />
-    <Content Include="Content\assets\img\blog\blog9.jpg" />
-    <Content Include="Content\assets\img\blog\blogbig.jpg" />
-    <Content Include="Content\assets\img\blog\comment2.jpg" />
-    <Content Include="Content\assets\img\blog\post-comment1.png" />
-    <Content Include="Content\assets\img\blog\post-comment2.png" />
-    <Content Include="Content\assets\img\blog\related1.jpg" />
-    <Content Include="Content\assets\img\blog\related2.jpg" />
-    <Content Include="Content\assets\img\favicon.ico" />
     <Content Include="Content\assets\img\icon\owl.video.play.png" />
     <Content Include="Content\assets\img\logo\Icon metro-list.png" />
     <Content Include="Content\assets\img\logo\Icon open-grid-three-up.png" />
     <Content Include="Content\assets\img\logo\logo.png" />
     <Content Include="Content\assets\img\logo\logos.png" />
-    <Content Include="Content\assets\img\others\instagram1.png" />
-    <Content Include="Content\assets\img\others\instagram2.png" />
-    <Content Include="Content\assets\img\others\instagram3.png" />
-    <Content Include="Content\assets\img\others\instagram4.png" />
-    <Content Include="Content\assets\img\others\instagram5.png" />
-    <Content Include="Content\assets\img\others\instagram6.png" />
-    <Content Include="Content\assets\img\others\instagram7.png" />
-    <Content Include="Content\assets\img\others\instagram8.png" />
-    <Content Include="Content\assets\img\paypal.jpg" />
-    <Content Include="Content\assets\img\product\big-product\product1.png" />
-    <Content Include="Content\assets\img\product\product1.jpg" />
-    <Content Include="Content\assets\img\product\product2.jpg" />
-    <Content Include="Content\assets\img\product\product2.jpg.png" />
-    <Content Include="Content\assets\img\product\product3.jpg" />
-    <Content Include="Content\assets\img\product\product4.jpg" />
-    <Content Include="Content\assets\img\product\product5.jpg" />
-    <Content Include="Content\assets\img\product\product6.jpg" />
-    <Content Include="Content\assets\img\product\product7.jpg" />
-    <Content Include="Content\assets\img\product\product8.jpg" />
-    <Content Include="Content\assets\img\product\small-product\product1.png" />
-    <Content Include="Content\assets\img\product\small-product\product2.png" />
-    <Content Include="Content\assets\img\product\small-product\product3.png" />
-    <Content Include="Content\assets\img\product\small-product\product4.png" />
+    <Content Include="Content\assets\img\product\videoPlay.gif" />
+    <Content Include="Content\assets\img\product\videoPlay2.gif" />
     <Content Include="Content\assets\img\slider\slider1.jpg" />
     <Content Include="Content\assets\img\slider\slider2.jpg" />
     <Content Include="Content\assets\img\slider\slider3.jpg" />
@@ -258,7 +220,6 @@
     <Content Include="Content\assets\js\vendor\popper.js" />
     <Content Include="Content\assets\js\vendor\vendor.min.js" />
     <Content Include="Content\assets\js\wow.min.js" />
-    <Content Include="Content\assets\mail.php" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
